[gd_scene load_steps=11 format=3 uid="uid://d37h7gsesra28"]

[ext_resource type="Texture2D" uid="uid://flwsjvt11uvh" path="res://Assets_npc/Woman_idle.png" id="1_0uacm"]
[ext_resource type="Script" uid="uid://no71p1wlmm71" path="res://Assets_npc/cena_npc/npc_mae.gd" id="1_k1msf"]
[ext_resource type="FontFile" uid="uid://c56hf5lax2ym3" path="res://Menu-assets/Font/8-BIT WONDER.TTF" id="3_fboeg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fboeg"]
size = Vector2(21, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_myaxu"]
atlas = ExtResource("1_0uacm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1msf"]
atlas = ExtResource("1_0uacm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fboeg"]
atlas = ExtResource("1_0uacm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv7l8"]
atlas = ExtResource("1_0uacm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0c7hm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myaxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1msf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fboeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv7l8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_uv7l8"]
font = ExtResource("3_fboeg")
font_size = 12
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="npcmae" type="Node2D"]
position = Vector2(6, -12)
scale = Vector2(2, 2)
script = ExtResource("1_k1msf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, -13)
shape = SubResource("RectangleShape2D_fboeg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -23)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_0c7hm")
autoplay = "default"
frame_progress = 0.428948

[node name="Label" type="Label" parent="."]
offset_left = -13.5
offset_top = -41.5
offset_right = 46.5
offset_bottom = -29.5
scale = Vector2(0.308357, 0.371048)
text = "teste"
label_settings = SubResource("LabelSettings_uv7l8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
